Fixed z-index issue

--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -17,6 +17,7 @@
                 rgba(15, 15, 15, 0.4) 0px 15px 40px;
     padding: 20px;
     width: 600px;
+    z-index: 2;
 }
 .Login .Login-wrap h3{
     margin-bottom: 30px;
@@ -60,6 +61,9 @@
     font-size: small;
     line-height: 1.3;
     text-align: center;
+}
+.Login .Invisible{
+    z-index: 1;
 }
 @media (max-width: 768px){
    .Login{
